<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorCallPopupCloseButton"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/tablet_frame_layout_padding">

        <TextView
            android:id="@+id/tablet_frame_contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tablet_frame_layout_margin"
            android:gravity="center"
            android:text="@string/maps_frame_contact_info"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tablet_frame_contact_info_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/tablet_frame_tel_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/main_btn_tel"
                android:contentDescription="@string/tablet_frame_description_icon" />

            <TextView
                android:id="@+id/tablet_frame_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:onClick="onCallButtonClick"
                android:text="@string/phone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tablet_frame_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/tablet_frame_cost_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tablet_frame_layout_margin"
            android:gravity="center"
            android:text="@string/call_popup_frame_layout_cost_info_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tablet_frame_text_size" />
    </LinearLayout>



</RelativeLayout>
