<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBelNuBackgroundTransparency"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/call_popup_frame_layout_margin"
        android:layout_marginRight="@dimen/call_popup_frame_layout_margin"
        android:layout_marginBottom="@dimen/call_popup_frame_layout_bottom_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/bel_nu_close_button"
                    android:layout_width="@dimen/call_popup_frame_layout_button_width"
                    android:layout_height="@dimen/call_popup_frame_layout_button_height"
                    android:layout_weight="1"
                    android:background="@color/colorCallPopupCloseButton"
                    android:drawableStart="@drawable/main_btn_close"
                    android:drawableLeft="@drawable/main_btn_close"
                    android:paddingLeft="@dimen/call_popup_frame_layout_button_padding_left"
                    android:text="@string/call_popup_frame_layout_button_text"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/call_popup_frame_layout_button_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCallPopupFrame"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10sp"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <TextView
                        android:id="@+id/bel_nu_title"
                        style="@style/TextAppearancePopupTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/call_popup_frame_layout_title_margin_bottom"
                        android:text="@string/call_popup_frame_layout_title_text" />

                    <TextView
                        android:id="@+id/bel_nu_text"
                        style="@style/TextAppearancePopup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_vertical_popup_txv"
                        android:gravity="center_horizontal"
                        android:paddingBottom="@dimen/call_popup_frame_layout_cost_info_padding"
                        android:text="@string/call_popup_frame_layout_cost_info_text" />
                </LinearLayout>

                <Button
                    android:id="@+id/bel_nu_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6sp"
                    android:background="@drawable/main_btn_bg"
                    android:drawableStart="@drawable/main_btn_phone"
                    android:drawableLeft="@drawable/main_btn_phone"
                    android:padding="10sp"
                    android:text="@string/call_popup_button_text"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
